--- a/module.yaml
+++ b/module.yaml
@@ -1,1 +1,15 @@
 product: jvm/app
+
+dependencies:
+  - org.jetbrains.kotlinx:kotlinx-datetime:0.4.0
+
+test-dependencies:
+  - org.jetbrains.kotlin:kotlin-test:1.9.21
+
+settings:
+  kotlin:
+    languageVersion: 1.9
+  java:
+    source: 17
+  jvm:
+    target: 17
